# spiral-matrix

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  readme.md  spiral.pro
include/: application.hpp  corner_points.hpp  matrix.hpp  matrix_filling.hpp  spiral_conditional.hpp  spiral_path.hpp  spiral_strategy.hpp  window.hpp
src/: application.cpp  main.cpp  matrix_filling.cpp  spiral_conditional.cpp  spiral_path.cpp  spiral_strategy.cpp  window.cpp
test/: CMakeLists.txt  matrix_test.hpp  test_mxn.cpp  test_square.cpp
